nobase_include_HEADERS = googleurl/gurl.h googleurl/url_canon.h googleurl/url_canon_icu.h googleurl/url_canon_internal_file.h googleurl/url_canon_internal.h googleurl/url_canon_ip.h googleurl/url_canon_stdstring.h googleurl/url_common.h googleurl/url_file.h googleurl/url_parse.h googleurl/url_parse_internal.h googleurl/url_util.h googleurl/base/basictypes.h googleurl/base/scoped_ptr.h googleurl/base/string16.h
